--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Computacion-Grafica.jar
+dist.jar=${dist.dir}/Jasson-Quiroga.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Tarea.Principal
+main.class=Examen.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -64,7 +64,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
